# linux-pause

./: .gitignore  CMakeLists.txt  README.md  description.txt  pause.c
include/: pause-func.h
src/: pause-func.c  pause.c
